# d7032e_home_exam

./: .gitignore  Cargo.toml  answer.md  readme.md  todo.md
.github/: copilot-instructions.md
src/: cards.rs  common.rs  game.rs  game_objects.rs  lib.rs  main.rs  phase.rs  terminal_ui.rs  util.rs
src/cards/: cards.json  cards.rs  initialize.rs
src/common/: user_decision.rs
src/game/: game.rs
src/game_objects/: active_player_token.rs  dice.rs  event_dice.rs  init.rs  production_dice.rs  strength_token.rs  trade_token.rs
src/phase/: action_phase.rs  brigand_attack.rs  event_die.rs  exchange_hand.rs  loop_phase.rs  mod.rs  production.rs  production_die.rs  replenish_hand.rs  roll_dice.rs
src/terminal_ui/: player_tui.rs
task_documentation/: HomeExam_pdf_as_text.txt
