[package]
name = "home_exam"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
color-eyre = "0.6.5"
crossbeam = "0.8.4"
crossterm = "0.29.0"
crosstermion = "0.14.0"
fern = "0.7.1"
hecs = "0.10.5"
log = "0.4.28"
rand = "0.9.2"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
